--- a/locales/ru-RU.json
+++ b/locales/ru-RU.json
@@ -1,4 +1,17 @@
 {
   "title": "Главная страница",
-  "roles": "Роли"
+  "create-new-user": "Создать новый пользователь",
+  "name":  "Ваше имя",
+  "email": "Ваш эелектронный адресс",
+  "password": "Ваш парол",
+  "repeat-password": "Повторить парол",
+  "choose-role": "Выберите роли",
+  "submit": "Зарегистрировать",
+  "register-new-user": "Регистрировать новый пользователь",
+  "home": "Главная",
+  "roles" : "Роли",
+  "users": "Пользователи",
+  "user-name": "Имя",
+  "email-address": "Почта",
+  "user-roles": "Роли"
 }
