--- a/locales/uzk-UZB.json
+++ b/locales/uzk-UZB.json
@@ -1,4 +1,17 @@
 {
   "title": "Бош сахифа",
-  "roles": "Роллар"
+  "create-new-user": "Янги фойдаланувчини яратиш",
+  "name":  "Исм",
+  "email": "Электрон манзил",
+  "password": "Парол",
+  "repeat-password": "Паролинни такрорланг",
+  "choose-role": "Ролларни танлвнг",
+  "submit": "Руйхаттан утиш",
+  "register-new-user": "Янги фойдаланувчини руйхатдан утказиш",
+  "home": "Бош сахифа",
+  "roles" : "Роллар",
+  "users": "Фойдаланувчилар",
+  "user-name": "Исм",
+  "email-address": "Email Почта",
+  "user-roles": "Роллар"
 }
