--- a/locales/ru-RU.json
+++ b/locales/ru-RU.json
@@ -13,5 +13,7 @@
   "users": "Пользователи",
   "user-name": "Имя",
   "email-address": "Почта",
-  "user-roles": "Роли"
+  "user-roles": "Роли",
+  "previous": "Назад",
+  "next": "Следующий"
 }
