--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -15,5 +15,6 @@
   "email-address": "Email Address",
   "user-roles": "User Roles",
   "previous": "Previous",
-  "next": "Next"
+  "next": "Next",
+  "permissions": "Permissions"
 }
