--- a/locales/uz-UZB.json
+++ b/locales/uz-UZB.json
@@ -15,6 +15,7 @@
   "email-address": "Email Pochta",
   "user-roles": "Rollar",
   "previous": "Orqaga",
-  "next": "Keyingi"
+  "next": "Keyingi",
+  "permissions": "Ruxsatlar"
 
 }
