--- a/locales/uzk-UZB.json
+++ b/locales/uzk-UZB.json
@@ -15,5 +15,6 @@
   "email-address": "Email Почта",
   "user-roles": "Роллар",
   "previous": "Оркага",
-  "next": "Кейинги"
+  "next": "Кейинги",
+  "permissions": "Рухсатлар"
 }
