--- a/locales/ru-RU.json
+++ b/locales/ru-RU.json
@@ -15,5 +15,6 @@
   "email-address": "Почта",
   "user-roles": "Роли",
   "previous": "Назад",
-  "next": "Следующий"
+  "next": "Следующий",
+  "permissions": "Разрешения"
 }
